--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/ProductionChainComponentCalculatorView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/ProductionChainComponentCalculatorView.xaml
@@ -21,40 +21,20 @@
 			
 			<Border Grid.Column="0" Background="{DynamicResource NormalBackgroundBrush}">
 				<StackPanel VerticalAlignment="Center">
-					<Border BorderBrush="{DynamicResource LightBorderBrush}" BorderThickness="0" HorizontalAlignment="Right" Margin="0,0,5,0">
-						<Grid Margin="3">
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition MinWidth="5" Width="Auto" />
-								<ColumnDefinition Width="0" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
-
-							<TextBox TextAlignment="Center" BorderThickness="0" Padding="0" VerticalContentAlignment="Center" FontWeight="Bold" MaxLength="10" Background="Transparent">
-								<TextBox.Text>
-									<Binding Path="Components.Multiplicator" Mode="TwoWay" ConverterCulture="{x:Static globalization:CultureInfo.InvariantCulture}" UpdateSourceTrigger="PropertyChanged" />
-								</TextBox.Text>
-								<Validation.ErrorTemplate>
-									<ControlTemplate>
-										<Border BorderThickness="0,0,0,3" Margin="0,5" BorderBrush="{DynamicResource FaultBrush}">
-											<AdornedElementPlaceholder />
-										</Border>
-									</ControlTemplate>
-								</Validation.ErrorTemplate>
-							</TextBox>
-
-							<Label HorizontalAlignment="Left" Grid.Column="2">
-								<Label.Content>
-									<MultiBinding>
-										<MultiBinding.Converter>
-											<components:StringConcatenationConverter />
-										</MultiBinding.Converter>
-										<Binding Source="x " />
-										<Binding Path="DisplayName" />
-									</MultiBinding>
-								</Label.Content>
-							</Label>
-						</Grid>
-					</Border>
+					<localComponents:InputField MaxLength="10" HorizontalAlignment="Right" Margin="0,0,5,0" Background="Transparent" BorderThickness="0">
+						<localComponents:InputField.Label>
+							<MultiBinding>
+								<MultiBinding.Converter>
+									<components:StringConcatenationConverter />
+								</MultiBinding.Converter>
+								<Binding Source="x " />
+								<Binding Path="DisplayName" />
+							</MultiBinding>
+						</localComponents:InputField.Label>
+						<localComponents:InputField.Text>
+							<Binding Path="Components.Multiplicator" Mode="TwoWay" ConverterCulture="{x:Static globalization:CultureInfo.InvariantCulture}" UpdateSourceTrigger="PropertyChanged" />
+						</localComponents:InputField.Text>
+					</localComponents:InputField>
 				</StackPanel>
 			</Border>
 			<Border Grid.Column="1" Background="{DynamicResource LightBorderBrush}" />
@@ -77,29 +57,16 @@
 									</Binding>
 								</Image.Source>
 							</Image>
-							<Border BorderBrush="{DynamicResource LightBorderBrush}" BorderThickness="1" HorizontalAlignment="Center">
-								<Grid Margin="3">
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition MinWidth="5" Width="Auto" />
-										<ColumnDefinition Width="3" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
 
-									<TextBox TextAlignment="Center" BorderThickness="0" Padding="0" VerticalContentAlignment="Center" FontWeight="Bold">
-										<TextBox.Text>
-											<Binding Path="Count" Mode="TwoWay" ConverterCulture="{x:Static globalization:CultureInfo.InvariantCulture}" UpdateSourceTrigger="PropertyChanged" />
-										</TextBox.Text>
-										<Validation.ErrorTemplate>
-											<ControlTemplate>
-												<Border BorderThickness="0,0,0,3" Margin="0,5" BorderBrush="{DynamicResource FaultBrush}">
-													<AdornedElementPlaceholder />
-												</Border>
-											</ControlTemplate>
-										</Validation.ErrorTemplate>
-									</TextBox>
-									<Label Content="{Binding ProductionBuildingDisplayName}" HorizontalAlignment="Left" Grid.Column="2" Margin="0,0,3,0" />
-								</Grid>
-							</Border>
+							<localComponents:InputField>
+								<localComponents:InputField.Label>
+									<Binding Path="ProductionBuildingDisplayName" />
+								</localComponents:InputField.Label>
+								<localComponents:InputField.Text>
+									<Binding Path="Count" Mode="TwoWay" ConverterCulture="{x:Static globalization:CultureInfo.InvariantCulture}" UpdateSourceTrigger="PropertyChanged" />
+								</localComponents:InputField.Text>
+							</localComponents:InputField>
+							
 							<Label HorizontalAlignment="Center" Opacity="0.77" Padding="0,5" x:Name="productivity">
 								<Label.Content>
 									<MultiBinding>
