--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/PopulationCalculatorPageView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/PopulationCalculatorPageView.xaml
@@ -15,14 +15,50 @@
 	<Grid Grid.IsSharedSizeScope="True">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="1" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
+
+		<Border Background="{DynamicResource DimBackgroundBrush}" Panel.ZIndex="9999">
+			<StackPanel Orientation="Horizontal" Margin="5,5">
+				<StackPanel.Resources>
+					<Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+						<Setter Property="BorderThickness" Value="0,1,1,1" />
+						<Setter Property="Background" Value="{DynamicResource NormalBackgroundBrush}" />
+					</Style>
+
+					<Style TargetType="ToggleButton" BasedOn="{StaticResource {x:Type ToggleButton}}">
+						<Setter Property="BorderThickness" Value="0,1,1,1" />
+						<Setter Property="Background" Value="{DynamicResource NormalBackgroundBrush}" />
+					</Style>
+				</StackPanel.Resources>
+
+				<Button BorderThickness="1" Command="{Binding ResetAllCommand}">
+					<Button.Content>
+						<Grid Height="Auto">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="20" />
+								<ColumnDefinition Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<Image Source="/Resources/Icons/ResetSmall.png" Stretch="None" HorizontalAlignment="Left" />
+							<Label Content="Alle zurücksetzen" Grid.Column="1" />
+						</Grid>
+					</Button.Content>
+				</Button>
+			</StackPanel>
+		</Border>
+
+		<Border Grid.Row="1" Grid.Column="0" Panel.ZIndex="9998" Background="{DynamicResource NormalBorderBrush}" VerticalAlignment="Top" Height="1">
+			<Border.Effect>
+				<DropShadowEffect Direction="270" Color="#000000" Opacity="0.44" BlurRadius="10" ShadowDepth="2" />
+			</Border.Effect>
+		</Border>
+
+		<Border Grid.Row="1" VerticalAlignment="Top" Height="30" Background="{DynamicResource NormalBackgroundBrush}" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource NormalBorderBrush}" />
+		<Border Grid.Row="2" VerticalAlignment="Top" Height="1" Background="{DynamicResource NormalBorderBrush}" />
 		
-		<Border Grid.Row="0" VerticalAlignment="Top" Height="30" Background="{DynamicResource NormalBackgroundBrush}" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource NormalBorderBrush}" />
-		<Border Grid.Row="1" VerticalAlignment="Top" Height="1" Background="{DynamicResource NormalBorderBrush}" />
-		
-		<ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
 			<ItemsControl ItemsSource="{Binding Fractions}" Focusable="False">
 				<ItemsControl.ItemsPanel>
 					<ItemsPanelTemplate>
@@ -65,7 +101,7 @@
 		</ScrollViewer>
 
 		<ListView 
-			Grid.Row="2"
+			Grid.Row="3"
 			ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
 			ScrollViewer.VerticalScrollBarVisibility="Auto"
 			Background="Transparent" BorderThickness="0" 
