--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/GroupedProductionChainListView.xaml
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/Views/GroupedProductionChainListView.xaml
@@ -15,14 +15,13 @@
 
 	<ListView
 		Background="Transparent" BorderThickness="0" Padding="0" 
-		SelectedItem="{Binding Selection.SelectedItem, Mode=TwoWay}"
 		ScrollViewer.HorizontalScrollBarVisibility="Auto"
 		ScrollViewer.VerticalScrollBarVisibility="Auto"
 		Focusable="False" Margin="0,0,0,0"
 		Grid.IsSharedSizeScope="True">
 
 		<FrameworkElement.Resources>
-			<CollectionViewSource x:Key="VisibleItems" Source="{Binding VisibleItems}" Filter="OnFilterCollectionViewSource">
+			<CollectionViewSource x:Key="VisibleItems" Source="{Binding VisibleItems, IsAsync=True}" Filter="OnFilterCollectionViewSource">
 				<CollectionViewSource.GroupDescriptions>
 					<PropertyGroupDescription PropertyName="PrincipalPopulationGroup" />
 				</CollectionViewSource.GroupDescriptions>
@@ -48,7 +47,7 @@
 						<Setter Property="Template">
 							<Setter.Value>
 								<ControlTemplate TargetType="{x:Type GroupItem}">
-									<Border>
+									<Border Background="{DynamicResource LightBackgroundBrush}">
 										<FrameworkElement.DataContext>
 											<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
 											<Binding Path="Name">
